# SimpleProj

./: .gitignore  CMakeLists.txt  README.md
SimpleProj/: CMakeLists.txt  main.cpp
shared/SimpleLib/: CMakeLists.txt
shared/SimpleLib/API/: Processor.h
shared/SimpleLib/Inc/: InternalProcessor.h
shared/SimpleLib/src/: Processor.cpp
